fixed layout shift on chrome

--- a/app/globals.css
+++ b/app/globals.css
@@ -113,6 +113,7 @@ h6 {
 
 html {
   min-width: 360px;
+  scrollbar-gutter: stable;
 }
 
 .prose {
